source/blender/freestyle/intern/system/PythonInterpreter.h
@@ -92,6 +92,7 @@ class PythonInterpreter : public Interpreter {
 
     if (!BPY_run_string_eval(_context, nullptr, str.c_str())) {
       BPy_errors_to_report(reports);
+      PyErr_Print();
       PyErr_Clear();
       cerr << "\nError executing Python script from PythonInterpreter::interpretString" << endl;
       cerr << "Name: " << name << endl;
