source/blender/python/intern/bpy_capi_utils.h
@@ -32,16 +32,11 @@ bool BPy_errors_to_report_ex(struct ReportList *reports,
                              bool use_full,
                              bool use_location);
 /**
- * \param reports: When set, an error will be added to this report, when NULL, print the error.
+ * \param reports: Any errors will be added to the report list.
  *
- * \note Unless the caller handles printing the reports (or reports is NULL) it's best to ensure
- * the output is printed to the `stdout/stderr`:
- * \code{.cc}
- * BPy_errors_to_report(reports);
- * if (!BKE_reports_print_test(reports)) {
- *   BKE_reports_print(reports);
- * }
- * \endcode
+ * \note The reports are never printed to the `stdout/stderr`,
+ * so you may wish to call either `BKE_reports_print(reports)` or `PyErr_Print()` afterwards.
+ * Typically `PyErr_Print()` is preferable as `sys.excepthook` is called.
  *
  * \note The caller is responsible for clearing the error (see #PyErr_Clear).
  */
